dev/kubernetes_deployments/05_clusterip.yaml
apiVersion: v1
kind: Pod
metadata:
 name: webapp2
 namespace: devproject
 labels:  #to map it with the service
  app: web2
  env: dev2
spec:
  containers:
  - name: webcon2
    image: sudarshanlnx/farmfresh:v1
    imagePullPolicy: Always
    ports:
    - containerPort: 80
      name: apache
      protocol: TCP
    resources:
          requests:
            memory: "200Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
 name: websvc2   #service name (it can be any name)
 namespace: devproject
spec:
 ports:
 - name: apache
   port: 80 #service port
   targetPort: 80 #container port
   protocol: TCP
 selector:     #mapping to pod
   app: web2
   env: dev2
