dev/kubernetes_deployments/06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeployment2
  namespace: devproject
spec:
  replicas: 4
  selector:
    matchLabels:
      apptype: web2
      env: dev2
  template:
    metadata:
      name: webtemp
      labels:
        apptype: web2
        env: dev2
    spec:
      containers:
      - image: sudarshanlnx/farmfresh:v1
#       - image: sudarshanlnx/neptune1:v1
        name: webcon2
        imagePullPolicy: Always
        ports:
        -  name: apache
           containerPort: 80
           protocol: TCP
        resources:
           requests:
             memory: "40Mi"
             cpu: "40m"
           limits:
             memory: "50Mi"
             cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
 name: websvc2  #service name (it can be any name)
 namespace: devproject
spec:
 type: LoadBalancer
 ports:
 - name: apache
   port: 80 #service port
   targetPort: 80 #container port
   protocol: TCP
 selector:     #mapping to pod
   apptype: web2
   env: dev2
