dev/kubernetes_deployments/08_ingressApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeployment
  namespace: devproject
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: web
      env: dev
  template:
    metadata:
      name: webtemp
      labels:
        apptype: web
        env: dev
    spec:
      containers:
      - image: sudarshanlnx/farmfresh:v1
        name: webcon
        imagePullPolicy: Always
        ports:
        -  name: apache
           containerPort: 80
           protocol: TCP
        resources:
           requests:
             memory: "200Mi"
             cpu: "200m"
           limits:
             memory: "300Mi"
             cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
 name: websvc   #service name (it can be any name)
 namespace: devproject
spec:
 ports:
 - name: apache
   port: 80 #service port
   targetPort: 80 #container port
   protocol: TCP
 selector:     #mapping to pod
   apptype: web
   env: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bananadeployment
  namespace: devproject
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: banana
      env: dev
  template:
    metadata:
      name: bananatemp
      labels:
        apptype: banana
        env: dev
    spec:
      containers:
      - image: hashicorp/http-echo
        args:
          - "-text=banana"
        name: bananacon
        imagePullPolicy: Always
        ports:
        -  name: apache
           containerPort: 5678
           protocol: TCP
        resources:
           requests:
             memory: "200Mi"
             cpu: "200m"
           limits:
             memory: "300Mi"
             cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
 name: bananasvc   #service name (it can be any name)
 namespace: devproject
spec:
 ports:
 - name: apache
   port: 80 #service port
   targetPort: 5678 #container port
   protocol: TCP
 selector:     #mapping to pod
   apptype: banana
   env: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appledeployment
  namespace: devproject
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: apple
      env: dev
  template:
    metadata:
      name: appletemp
      labels:
        apptype: apple
        env: dev
    spec:
      containers:
      - image: hashicorp/http-echo
        args:
          - "-text=apple"
        name: applecon
        imagePullPolicy: Always
        ports:
        -  name: apache
           containerPort: 5678
           protocol: TCP
        resources:
           requests:
             memory: "200Mi"
             cpu: "200m"
           limits:
             memory: "300Mi"
             cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
 name: applesvc   #service name (it can be any name)
 namespace: devproject
spec:
 ports:
 - name: apache
   port: 80 #service port
   targetPort: 5678 #container port
   protocol: TCP
 selector:     #mapping to pod
   apptype: apple
   env: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: webingress
   namespace: devproject
spec:
   ingressClassName: nginx
   rules:
   - host: "www.awsdevopsai.online"
     http:
       paths:
       - path: "/"
         pathType: "Prefix"
         backend:
           service:
             name: websvc
             port:
              number: 80
   - host: "www.awsdevopsai.online"
     http:
       paths:
       - path: "/banana"
         pathType: "Prefix"
         backend:
           service:
               name: bananasvc
               port:
                 number: 80
   - host: "www.awsdevopsai.online"
     http:
       paths:
       - path: "/apple"
         pathType: "Prefix"
         backend:
           service:
              name: applesvc
              port:
                number: 80
